feat: error page created

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 NEXTAUTH_SECRET=abc
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://build-master-pc-faizulosman.vercel.app/
 
 GITHUB_ID=9cfeb4d90047256af77b
-GITHUB_SECRET=3e9984fdf568639d531ba31497aebcb1d6c16a6a
-GOOGLE_ID=1013409068721-ttfg49mnk9ikcomnma3p1c6k8lm5l9up.apps.googleusercontent.com
-GOOGLE_SECRET=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
+GITHUB_SECRET=871471adce1d3ea01d10daafe3889bb220fc8e3d
+# GITHUB_SECRET=3e9984fdf568639d531ba31497aebcb1d6c16a6a
+GOOGLE_ID=419947989613-78lp7ej0acdcnroia73cpq42i36fjhrr.apps.googleusercontent.com
+GOOGLE_SECRET=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
+# GOOGLE_ID=1013409068721-ttfg49mnk9ikcomnma3p1c6k8lm5l9up.apps.googleusercontent.com
+# GOOGLE_SECRET=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
